--- a/_config.yml
+++ b/_config.yml
@@ -243,7 +243,7 @@ defaults:
     values:
       layout: talk
       author_profile: false
-      share: true
+      share: false
 
 # Sass/SCSS
 sass:
