--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zifeng Cheng (程紫峰)"
 title_separator          : "-"
 name                     : &name "Zifeng Cheng"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://bigorange-petrichor.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/bigorange-Petrichor"
+  github           : "bigorange-Petrichor"
   google_plus      :
   keybase          :
   instagram        :
