--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "personal description"
 url                      : https://bigorange-petrichor.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "bigorange-petrichor/bigorange-petrichor.github.io"
-teaser                   : "500.png"
+teaser                   : "500.jpq"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
