--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Zifeng Cheng"
-  avatar           : "profile.png"
+  avatar           : "500.jpq"
   bio              : "Ph. D. student, Nanjing University"
   location         : "Nanjing"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.hk/citations?user=msx09eYAAAAJ&hl=zh-CN"
-  email            :
+  email            : "chengzf@smail.nju.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
