--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zifeng Cheng"
-  avatar           : "500.jpq"
+  avatar           : "500.png"
   bio              : "Ph. D. student, Nanjing University"
   location         : "Nanjing"
   employer         :
