--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zifeng Cheng"
   avatar           : "500.png"
-  bio              : "Ph. D. student, Nanjing University"
+  bio              : "Ph. D. Candidate, Nanjing University"
   location         : "Nanjing"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
