--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Zifeng Cheng (程紫峰)"
 title_separator          : "-"
 name                     : &name "Zifeng Cheng"
 description              : &description "personal description"
-url                      : https://bigorange-petrichor.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zifengcheng.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "bigorange-petrichor/bigorange-petrichor.github.io"
+repository               : "zifengcheng/zifengcheng.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "bigorange-Petrichor"
+  github           : "zifengcheng"
   google_plus      :
   keybase          :
   instagram        :
